--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -7,6 +7,10 @@
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); }
 
+.blue-text {
+  color: #337ab7;
+}
+
 body {
   background: #eee;
   color: #666666; }
